# lfg.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.zig
docs/: online-learning.plan.md  online-learning.spec.md
src/inference/: lfg_api.cpp  lfg_api.h  lfg_sampling.cpp
src/tests/: test_chat_integration.cpp  test_tool_chat_integration.cpp  test_tool_injection.cpp
tools/demo/: main.cpp
